@@ -1,3 +1,10 @@
+2006-01-30  Davyd Madeley  <davyd@madeley.id.au>
+
+	* stickynotes_applet.c:
+	* stickynotes_applet.h:
+	* stickynotes_applet_callbacks.c: remove dead code that caused a
+	  critical warning - closes #327835.
+
 2006-01-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* docs/es/es.po: Updated spanish translation.
